<resources>
    <string name="app_name">GingerBread</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_gingerbread">Order Gingerbread</string>
    <string name="one">One</string>
    <string name="six">Six</string>
    <string name="twelve">Twelve</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="total">TOTAL %s</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="quantity">QUANTITY</string>
    <string name="flavor">FLAVOR</string>
    <string name="pick_up_date">PICK UP DATE</string>
    <string name="send_order_to_another_app">send order to another app</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>